[package]
name = "cargodrop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.17"
tar = "0.4"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
ctrlc = "3.4"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
